--- a/css/screen.css
+++ b/css/screen.css
@@ -2,6 +2,18 @@
 #FONTS
 \*------------------------------------*/
 
+@font-face{
+    font-family: "Inter Web";
+    font-weight: 400;
+    src: url("../fonts/Inter-Regular.woff2") format("woff2");
+}
+
+@font-face{
+    font-family: "Inter Web";
+    font-weight: 400;
+    src: url("../fonts/Inter-SemiBold.woff2") format("woff2");
+}
+
 /*------------------------------------*\
 #Variables
 \*------------------------------------*/
@@ -25,12 +37,12 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
-    color: grey;
+    font-family: Inter, arial, sans-serif;
+    color:  #20223a;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: white;
+    background-color: #F5F6FA;
 }
 
 *,
@@ -47,13 +59,13 @@ html {
 */
 
 ::-moz-selection {
-    background: HotPink;
+    background:#3385FF;
     color: white;
     text-shadow: none;
 }
 
 ::selection {
-    background: HotPink;
+    background: #3385FF;
     color: white;
     text-shadow: none;
 }
@@ -158,18 +170,20 @@ hr {
 }
 
 a {
-    color: HotPink;
+    color:#3385FF;
     transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
-    color: HotPink;
+    color:#3385FF;
 }
 
-a:hover,
+a:hover{
+    color: #4643ff;
+}
 a:focus {
-    color: DeepPink;
+    color: #4643ff;
 }
 
 /*------------------------------------*\
@@ -432,6 +446,33 @@ a:focus {
     Website main logo
 */
 
+.c-logo__symbol{
+    height: 100%;
+    
+
+}
+
+.c-logo{
+    height: 24px;
+    display: flex;
+    flex-flow: column wrap;
+
+
+}
+
+.c-logo__path{} 
+.c-logo__path--1{
+    fill: #20223A;
+}
+
+.c-logo__path--2{
+    fill: #3385FF;
+}
+
+
+.c-logo__path--3{
+    fill: #1B4186;
+}
 /*
     Component: Card
     ---
