--- a/css/screen.css
+++ b/css/screen.css
@@ -522,11 +522,16 @@ input{
     font-size: 16px;
     line-height: 24px;
     padding: 11px;
+    outline: none;
 }
 
 
 
 .c-input:focus {
+    border-color: #4F95FF;
+    box-shadow: h-offset v-offset blur spread color;
+    box-shadow: 0 0 0 3px #3385ff4d ;
+
 }
 
 /*
