--- a/css/screen.css
+++ b/css/screen.css
@@ -37,7 +37,7 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Inter, arial, sans-serif;
+    font-family: "Inter Web", arial, sans-serif;
     color:  #20223a;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
